# h3-duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  h3-extension.cpp  h3_common.cpp  h3_config.py  test.sql
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  _extension_deploy.yml  test.yml  tests.yml
data/: a.csv
h3_functions/: CMakeLists.txt  h3_cell_to_parent.cpp  h3_directededge.cpp  h3_hierarchy.cpp  h3_indexing.cpp  h3_inspection.cpp  h3_latlng_to_cell.cpp  h3_misc.cpp  h3_regions.cpp  h3_traversal.cpp  h3_valid.cpp  h3_vertex.cpp
include/: h3-extension.hpp  h3_common.hpp  h3_functions.hpp
src/: h3_common.cpp  h3_directededge.cpp  h3_extension.cpp  h3_hierarchy.cpp  h3_indexing.cpp  h3_inspection.cpp  h3_misc.cpp  h3_regions.cpp  h3_traversal.cpp  h3_vertex.cpp  h3ext_extension.cpp  well_known.cpp  well_known_decoder.cpp  well_known_encoder.cpp
src/include/: h3_common.hpp  h3_extension.hpp  h3_functions.hpp  h3ext_extension.hpp  well_known.hpp  well_known_decoder.hpp  well_known_encoder.hpp
test/data/: cell_order.json  simple.parquet
test/h3/: h3_functions.test  h3_functions_directededge.test  h3_functions_hierarchy.test  h3_functions_indexing.test  h3_functions_inspection.test  h3_functions_misc.test  h3_functions_regions.test  h3_functions_traversal.test  h3_functions_vertex.test  h3_parquet.test
test/sql/h3/: h3_functions.test  h3_functions_directededge.test  h3_functions_directededge_wkb.test  h3_functions_hierarchy.test  h3_functions_indexing.test  h3_functions_indexing_wkb.test  h3_functions_inspection.test  h3_functions_misc.test  h3_functions_regions.test  h3_functions_regions_old_order.test  h3_functions_regions_wkb.test  h3_functions_regions_wkb_to_cells.test  h3_functions_traversal.test  h3_functions_vertex.test  h3_json.test  h3_parquet.test
